--- a/src/app/check-in/check-in.component.html
+++ b/src/app/check-in/check-in.component.html
@@ -5,28 +5,31 @@
   <form>  
     <div class="form-group row">
       <div class="form-group col">
-        <label class="col-5 col-form-label">Data/Hora de entrada</label>
-        <div class="col-10">
-          <input type="text" class="form-control">
+        <label class="col-form-label">Data/Hora de entrada</label>
+        <div>
+          <input type="datetime-local" class="form-control" required>
         </div>
       </div>
+      
       <div class="form-group col">
-        <label class="col-10 col-form-label">Data/Hora de saída</label>
-        <div class="col-10">
-          <input type="text" class="form-control">
+        <label class="col-form-label">Data/Hora de saída</label>
+        <div>
+          <input type="datetime-local" class="form-control" required>
         </div>
       </div> 
-    </div>     
+    </div>  
+
     <div class="form-group row">  
       <div class="form-group col">
-        <label class="col-5 col-form-label">Data/Hora de saída</label>
-        <div class="col-9">
-          <input type="text" class="form-control">
+        <label class="col-form-label">Pessoa</label>
+        <div>
+          <input type="text" class="form-control" placeholder="Nome/CPF" required>
         </div>
-      </div>     
-      <div class="form-group col">
+      </div>
+
+      <div id="checkbox" class="form-group col">
         <legend class="col-form-label col-3"></legend>
-        <div class="col-9">
+        <div class="">
           <div class="form-check">
             <label class="form-check-label">
               <input class="form-check-input" type="checkbox" value="possuiVeiculo">
@@ -37,9 +40,9 @@
       </div>
     </div>   
     
-    <div class="form-group row">
-      <div class="col-4">
-        <button type="submit" class="btn btn-primary">Gravar</button>
+    <div id="divButton" class="form-group row">
+      <div>
+        <button type="submit" class="btn btn-dark">Gravar</button>
       </div>
     </div>
   </form>
