--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,11 @@
 <header>
-  <img id="logo" src="../../assets/img/logoSenior.png">
-  <div id="menu" class="dropdown">
-      <img id="menuIcon" src="../../assets/img/menuIcon.png" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-      <div class="dropdown-menu">
-        <a class="dropdown-item" routerLink="/checkIn">Check In</a>
-        <a class="dropdown-item" routerLink="/consultas">Consultar Pessoas</a>
-        <a class="dropdown-item" routerLink="/addPessoa">Adicionar Pessoa</a>
-      </div>
+  <div class="dropdown">
+    <img src="../../assets/img/menuIcon.png" id="icon" class="btn dropdown-toggle" data-toggle="dropdown">
+    <div class="dropdown-menu">
+      <a class="dropdown-item" routerLink="/checkIn">Check In</a>
+      <a class="dropdown-item" routerLink="/consultas">Consultar Pessoas</a>
+      <a class="dropdown-item" routerLink="/addPessoa">Adicionar Pessoa</a>
     </div>
+  </div>  
+  <img id="logo" src="../../assets/img/logo-white.png">
 </header>
