--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-menu></app-menu>
-<router-outlet></router-outlet>
+<div id="main" (window:resize)="onResize($event)">
+    <app-menu></app-menu>
+    <router-outlet></router-outlet>
+</div>
