--- a/src/app/check-in/check-in.component.css
+++ b/src/app/check-in/check-in.component.css
@@ -1,3 +1,25 @@
 #container {
+    margin: 2em;
     padding: 1em;
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: .3em;
+}
+
+#titulo {
+    font-weight: 600; 
+}
+
+#checkbox {
+    padding-top: 2em;
+}
+
+#divButton {
+    margin-left: 50%;
+}
+
+.btn-dark {
+    width: 6em;
+    margin-left: -3em; 
+    font-size: 1em;    
+    border: solid 1px grey;
 }
