--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,20 +1,43 @@
 header{
-    height: 4em;
-    background-color: rgba(0, 0 ,0 , .2);
+    height: 5em;
+    background-color: #696969;
 }
 
 #logo {
-    padding-top: .5em; 
-    height: 3em;
+    margin-right: 1em; 
+    height: 5em;
+    float: right;
+}
+
+.dropdown {
     float: left;
+    height: 5em;
+    width: 5.5em; 
 }
 
-#menu {
-    padding-top: .8em;
-}
-
-#menuIcon {
-    height: 30px;
+#icon {
+    height: 3em;
+    width: 4em;
+    margin: .7em;
+    margin-top: 1em;
     border: none;
-    background-color: rgba(0, 0 ,0 , 0);
+}
+
+.dropdown-menu {
+    padding: 0;
+    margin-top: 1em;
+    margin-left: -1em;
+    width: 11em;    
+    border: 0px;
+    border-radius: 0px;
+    background-color: #696969;
+}  
+
+.dropdown-item {
+    border-color: #696969;
+    color: white;
+}
+
+.dropdown-item:hover {
+    background-color: #343a40;
 }
