--- a/src/app/check-in/check-in.component.html
+++ b/src/app/check-in/check-in.component.html
@@ -3,7 +3,7 @@
     <h1>Novo Check In</h1>
   </div>
   <ngx-spinner></ngx-spinner>
-  <form>  
+  <form>
     <div class="form-group row">
       <div class="form-group col">
         <label class="col-form-label">Data/Hora de entrada</label>
@@ -11,25 +11,25 @@
           <input type="datetime-local" class="form-control" name="dataEntrada" [(ngModel)]="checkin.dataEntrada" required>
         </div>
       </div>
-      
+
       <div class="form-group col">
         <label class="col-form-label">Data/Hora de saída</label>
         <div>
           <input type="datetime-local" class="form-control" name="dataSaida" [(ngModel)]="checkin.dataSaida" required>
         </div>
-      </div> 
-    </div>  
-    
-    <div class="form-group row">  
+      </div>
+    </div>
+
+    <div class="form-group row">
       <div class="form-group col">
         <label class="col-form-label">Pessoa</label>
         <div>
-          <select class="form-control" name="idPessoa" [(ngModel)]="checkin.pessoaId">
-            <option *ngFor="let pessoa of pessoas" value="{{pessoa.id}}">{{ pessoa.nome }} - {{ pessoa.documento }}</option>
+          <select class="form-control" name="idPessoa" [(ngModel)]="checkin.idPessoa">
+            <option *ngFor="let pessoa of pessoas" value="{{pessoa.id}}">{{ pessoa.nome }} - {{ integerToCpf(pessoa.documento) }}</option>
           </select>
         </div>
       </div>
-      
+
       <div id="checkbox" class="form-group col">
         <legend class="col-form-label col-3"></legend>
         <div class="">
@@ -41,8 +41,8 @@
           </div>
         </div>
       </div>
-    </div>   
-    
+    </div>
+
     <div id="divButton" class="form-group row">
       <div>
         <button type="button" class="btn btn-dark" (click)="gravarCheckin(checkin)">Gravar</button>
